# scratch

./: Makefile  scratch.cabal  stack.yaml
lib/Foo/: Bar.hs  Baz.hs
