name:                scratch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Alexander Bakst
maintainer:          abakst@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W
  exposed-modules:     Foo.Bar,
                       Foo.Baz

  -- other-extensions:
  build-depends:       base, liquidhaskell

  hs-source-dirs:      lib
  default-language:    Haskell2010
